--- a/main.html
+++ b/main.html
@@ -4,34 +4,39 @@
 <head>
     <link href="styles.css" rel="stylesheet" type="text/css"/>
     <script src="admin.js" async></script>
+    <title>SIMON SAYS!!!!</title>
 </head>
 <body>
     <form>
         <table id="tabla">
-            <th id="th"><span></span></th>
+            <th><span id="th">SECUENCIA:</span></th>
             <tr>
-                <td class="td"><span><p>1</p></span></td>
-                <td class="td"><span><p>2</p></span></td>
-                <td class="td"><span><p>3</p></span></td>
-                <td class="td"><span><p>4</p></span></td>
+                <td class="s"><span class="texto"><p>1</p></span></td>
+                <td class="s"><span class="texto"><p>1</p></span></td>
+                <td class="s"><span class="texto"><p>1</p></span></td>
+                <td class="s"><span class="texto"><p>1</p></span></td>
+                <td class="s"><span class="texto"><p>1</p></span></td>
             </tr>
             <tr>
-                <td class="td"><span><p>1</p></span></td>
-                <td class="td"><span><p>2</p></span></td>
-                <td class="td"><span><p>3</p></span></td>
-                <td class="td"><span><p>4</p></span></td>
+                <td class="s"><span class="texto"><p>1</p></span></td>
+                <td class="s"><span class="texto"><p>1</p></span></td>
+                <td class="s"><span class="texto"><p>1</p></span></td>
+                <td class="s"><span class="texto"><p>1</p></span></td>
+                <td class="s"><span class="texto"><p>1</p></span></td>
             </tr>
             <tr>
-                <td class="td"><span><p>1</p></span></td>
-                <td class="td"><span><p>2</p></span></td>
-                <td class="td"><span><p>3</p></span></td>
-                <td class="td"><span><p>4</p></span></td>
+                <td class="s"><span class="texto"><p>1</p></span></td>
+                <td class="s"><span class="texto"><p>1</p></span></td>
+                <td class="s"><span class="texto"><p>1</p></span></td>
+                <td class="s"><span class="texto"><p>1</p></span></td>
+                <td class="s"><span class="texto"><p>1</p></span></td>
             </tr>
             <tr>
-                <td class="td"><span><p>1</p></span></td>
-                <td class="td"><span><p>2</p></span></td>
-                <td class="td"><span><p>3</p></span></td>
-                <td class="td"><span><p>4</p></span></td>
+                <td class="s"><span class="texto"><p>1</p></span></td>
+                <td class="s"><span class="texto"><p>1</p></span></td>
+                <td class="s"><span class="texto"><p>1</p></span></td>
+                <td class="s"><span class="texto"><p>1</p></span></td>
+                <td class="s"><span class="texto"><p>1</p></span></td>
             </tr>
         </table>
     </form>
