--- a/SimonSays.html
+++ b/SimonSays.html
@@ -10,13 +10,13 @@
 <body>
     <div class="title">
         <span>
-            <div class="mode">
-                <div><span>Facil</span></div>
-                <div><span>Media</span></div>
-                <div><span>Dificil</span></div>
+            <div class="modes">
+                <div><span class="mode">Facil</span></div>
+                <div><span class="mode">Media</span></div>
+                <div><span class="mode">Dificil</span></div>
             </div>
             <div id="counter" class="counter"></div>
-            <div class="mode">
+            <div class="modes">
                 <div><span>Facil</span></div>
                 <div><span>Media</span></div>
                 <div><span>Dificil</span></div>
