--- a/SimonSays.html
+++ b/SimonSays.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link href="SimonsSays.css" rel="stylesheet" type="text/css" />
+    <link href="SimonSays.css" rel="stylesheet" type="text/css" />
     <script src="SimonSays.js" async></script>
     <title>SIMON SAYS!!!!</title>
 </head>
@@ -24,7 +24,6 @@
         </span>
     </div>
     <div class="tabla" id="tabla">
-
     </div>
 </body>
 
